<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_share"
        android:title="@string/menu_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_comments"
        android:title="@string/menu_comments"
        android:icon="@drawable/ic_comment_black_24dp"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/menu_download"
        android:title="@string/menu_download"
        android:icon="@drawable/ic_file_download_black_24dp"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_info"
        android:title="@string/menu_info"
        android:icon="@drawable/ic_info_outline_black_24dp"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_wallpaper"
        android:title="@string/menu_wallpaper"
        android:icon="@drawable/ic_wallpaper_black_24dp"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_slideshow"
        android:title="@string/menu_slideshow"
        android:icon="@drawable/ic_play_arrow_black_24dp"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>