<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.PhotoInfoActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:id="@+id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="@dimen/cardview_default_radius"
                    app:cardElevation="@dimen/cardview_default_elevation">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title_header"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|center_vertical"
                            android:text="@string/title"
                            android:textColor="@color/colorAccent" />

                        <TextView
                            android:id="@+id/title"
                            style="@style/TextAppearance.AppCompat.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:fontFamily="sans-serif-light"
                            android:maxLines="2" />


                        <TextView
                            android:id="@+id/description_header"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|center_vertical"
                            android:text="@string/description"
                            android:textColor="@color/colorAccent" />

                        <TextView
                            android:id="@+id/description"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:fontFamily="sans-serif-light"/>


                        <TextView
                            android:id="@+id/date_created_header"
                            style="@style/TextAppearance.AppCompat.Body1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start|center_vertical"
                            android:text="@string/date_created"
                            android:textColor="@color/colorAccent" />

                        <TextView
                            android:id="@+id/date_created"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:fontFamily="sans-serif-light"/>

                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="@dimen/cardview_default_radius"
                    app:cardElevation="@dimen/cardview_default_elevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:gravity="center_horizontal"
                            android:orientation="horizontal">


                            <ImageView
                                android:id="@+id/num_views_icon"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center_vertical"
                                android:tint="@color/gray"
                                app:srcCompat="@drawable/ic_visibility_black_24dp" />

                            <TextView
                                android:id="@+id/num_views"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:fontFamily="sans-serif-light"
                                android:paddingStart="5dp" />


                            <ImageView
                                android:id="@+id/num_favorites_icon"
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="5dp"
                                android:tint="@color/gray"
                                app:srcCompat="@drawable/ic_favorite_border_black_24dp" />

                            <TextView
                                android:id="@+id/num_favorites"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:fontFamily="sans-serif-light"
                                android:paddingStart="5dp" />

                            <LinearLayout
                                android:id="@+id/num_comments_layout"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/num_comments_icon"
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginStart="5dp"
                                    android:tint="@color/gray"
                                    app:srcCompat="@drawable/ic_comment_black_24dp" />


                                <TextView
                                    android:id="@+id/num_comments"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:fontFamily="sans-serif-light"
                                    android:paddingStart="5dp" />

                            </LinearLayout>


                        </LinearLayout>

                        <RatingBar
                            android:id="@+id/rating"
                            style="@style/Widget.AppCompat.RatingBar.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="5dp"
                            android:isIndicator="true" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/exif_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="@dimen/cardview_default_radius"
                    app:cardElevation="@dimen/cardview_default_elevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/exif"
                            android:textColor="@color/colorAccent" />


                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recycler_exif"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />

                    </LinearLayout>


                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:id="@+id/tags_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    app:cardCornerRadius="@dimen/cardview_default_radius"
                    app:cardElevation="@dimen/cardview_default_elevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tags"
                            android:textColor="@color/colorAccent" />

                        <TextView
                            android:id="@+id/tags"
                            style="@style/TextAppearance.AppCompat.Medium"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light" />

                    </LinearLayout>


                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:id="@+id/map_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    app:cardCornerRadius="@dimen/cardview_default_radius"
                    app:cardElevation="@dimen/cardview_default_elevation">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/location_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/colorAccent" />

                        <RelativeLayout
                            android:id="@+id/map_container"
                            android:layout_width="match_parent"
                            android:layout_height="200dp" />

                    </LinearLayout>


                </android.support.v7.widget.CardView>


                <Button
                    android:id="@+id/ok"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@android:string/ok" />

            </LinearLayout>

        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</android.support.design.widget.CoordinatorLayout>